--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ script:
     - mvn appengine:endpoints_get_client_lib
     - cd drivelog.server-war/target/endpoints-client-libs/drivelog
     - mvn install
+    - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
     - git clone git@github.com:HappyCarl/mvn-repo.git
     - mkdir -p mvn-repo/snapshots
     - mvn -DaltDeploymentRepository=snapshot-repo::default::file:./mvn-repo/snapshots clean deploy
