--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ script:
     - mkdir -p mvn-repo/snapshots
     - mvn -DaltDeploymentRepository=snapshot-repo::default::file:./mvn-repo/snapshots clean deploy
     - cd mvn-repo
+    - git config --global user.email "info@travis-ci.org"
+    - git config --global user.name "Travis CI"
     - git add *
     - git commit -m "New Drivelog Java Clientlibs. Deploy ${TRAVIS_BUILD_NUMBER}."
-    - git push origin master
+    - git push -u origin master
 env:
     global:
         secure: hCuGBCuJaJpPZnrzG4uickZ2NsBBXRehi0oWNMZXz0NTUMJsKRiL0lyKkYiex3LJ6MH6+h+BbNaw9ps15HWznQhvM6Nk2RxR3ZjpkYXXys/5cBdc7Xi+mEPoBNPewSnTCbt4tIrW0KGnI7NKDWjz9xXzBLa/vLz/luc6gkAhVYw=
