--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 language: java
 script:
-    - mvn install
-    - mvn appengine:endpoints_get_client_lib
-    - cd drivelog.server-war/target/endpoints-client-libs/drivelog
-    - mvn install
-    - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-    - git clone https://$GIT_TOKEN@github.com/HappyCarl/mvn-repo.git mvn-repo
-    - mkdir -p mvn-repo/snapshots
-    - mvn -DaltDeploymentRepository=snapshot-repo::default::file:./mvn-repo/snapshots clean deploy
-    - cd mvn-repo
-    - git config --global user.email "info@travis-ci.org"
-    - git config --global user.name "Travis CI"
-    - git add *
-    - git commit -m "New Drivelog Java Clientlibs. Deploy ${TRAVIS_BUILD_NUMBER}."
-    - git push -u origin master
+- mvn install
+- mvn appengine:endpoints_get_client_lib
+- cd drivelog.server-war/target/endpoints-client-libs/drivelog
+- mvn install
+- echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- git clone https://$GIT_TOKEN@github.com/HappyCarl/mvn-repo.git mvn-repo
+- mkdir -p mvn-repo/snapshots
+- mvn -DaltDeploymentRepository=snapshot-repo::default::file:./mvn-repo/snapshots
+  clean deploy
+- cd mvn-repo
+- git config --global user.email "info@travis-ci.org"
+- git config --global user.name "Travis CI"
+- git add *
+- git commit -m "New Drivelog Java Clientlibs. Deploy ${TRAVIS_BUILD_NUMBER}."
+- git push -u origin master > /dev/null
 env:
-    global:
-        secure: hCuGBCuJaJpPZnrzG4uickZ2NsBBXRehi0oWNMZXz0NTUMJsKRiL0lyKkYiex3LJ6MH6+h+BbNaw9ps15HWznQhvM6Nk2RxR3ZjpkYXXys/5cBdc7Xi+mEPoBNPewSnTCbt4tIrW0KGnI7NKDWjz9xXzBLa/vLz/luc6gkAhVYw=
+  global:
+    secure: frNTjyzdUYybPAjCoOgcI01JIXYW/fDw/P1p9QruJW0E0fRAQ0k9/st6xRF8c+2Lcu4vera5CnTfcPEjDG+EH2fPsKDkj2aiIVgwMRcse+ul2ImzYLYeFln7kL18ON1TmqEkkuHoBeqlfFq7WMeu0qzMJUt5ZuTAxLb5/apmFoo=
