--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,14 @@ script:
 - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 - git clone https://$GIT_TOKEN@github.com/HappyCarl/mvn-repo.git mvn-repo
 - mkdir -p mvn-repo/snapshots
-- mvn -DaltDeploymentRepository=snapshot-repo::default::file:./mvn-repo/snapshots clean deploy
+- mvn -DaltDeploymentRepository=snapshot-repo::default::file:./mvn-repo/snapshots
+  clean deploy
 - cd mvn-repo
 - git config --global user.email "info@travis-ci.org"
 - git config --global user.name "Travis CI"
 - git add *
 - git commit -m "New Drivelog Java Clientlibs. Deploy ${TRAVIS_BUILD_NUMBER}."
-- git push -u origin master > /dev/null
+- git push -u origin master &> /dev/null
 env:
   global:
-    secure: frNTjyzdUYybPAjCoOgcI01JIXYW/fDw/P1p9QruJW0E0fRAQ0k9/st6xRF8c+2Lcu4vera5CnTfcPEjDG+EH2fPsKDkj2aiIVgwMRcse+ul2ImzYLYeFln7kL18ON1TmqEkkuHoBeqlfFq7WMeu0qzMJUt5ZuTAxLb5/apmFoo=
+    secure: uu2//EfRUYs1BO91U0YEs8s694LJ3NFtvib42ur9rsgAupOMIFY2ZrGr8sLSEEo2KWUIEYN4N+1galmwH9KMq7kMj97N+dU+9qDeXjJ5vqFiB/yrVbwsKo4xDIfePrfNA21Eyz+vCxn2f8lFa2rNwZPdhF2Tw/7Ev6eXLi4uvrk=
