--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ out
 *~
 
 drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java
+drivelog.server-war/src/main/webapp/WEB-INF/keys.properties
