add env vars to travis and other awesome things

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 script:
+- sed 's/REPLACE_WEB_CLIENT_ID/'"$WEB_CLIENT_ID"'/g' drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java > drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java
+- sed 's/REPLACE_ANDROID_CLIENT_ID/'"$ANDROID_CLIENT_ID"'/g' drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java > drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java
+- sed 's/REPLACE_IOS_CLIENT_ID/'"$IOS_CLIENT_ID"'/g' drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java > drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java
 - mvn install
 - mvn appengine:endpoints_get_client_lib
 - cd drivelog.server-war/target/endpoints-client-libs/drivelog
@@ -17,4 +20,5 @@ script:
 - git push -u origin master &> /dev/null
 env:
   global:
-    secure: uu2//EfRUYs1BO91U0YEs8s694LJ3NFtvib42ur9rsgAupOMIFY2ZrGr8sLSEEo2KWUIEYN4N+1galmwH9KMq7kMj97N+dU+9qDeXjJ5vqFiB/yrVbwsKo4xDIfePrfNA21Eyz+vCxn2f8lFa2rNwZPdhF2Tw/7Ev6eXLi4uvrk=
+  - secure: uu2//EfRUYs1BO91U0YEs8s694LJ3NFtvib42ur9rsgAupOMIFY2ZrGr8sLSEEo2KWUIEYN4N+1galmwH9KMq7kMj97N+dU+9qDeXjJ5vqFiB/yrVbwsKo4xDIfePrfNA21Eyz+vCxn2f8lFa2rNwZPdhF2Tw/7Ev6eXLi4uvrk=
+  - secure: DazBOINsfZIagMmf9fQOAAqOvAavDEO9rNqG+Ih0BHb8UHudxnZD+u+ptKvSEopgNGmT40DZ/z8O21ryztMmsXBY92t7jRaoMskNzLvf2uAGkLOwYVPcgpHho8NxWLxwL2jQ84UwmBgvz0pExORY5wgQ5ARqf2MnU/IiNMFuYI8=
