--- a/.travis.yml
+++ b/.travis.yml
@@ -7,26 +7,36 @@ script:
 - sed 's/REPLACE_IOS_CLIENT_ID/'"$IOS_CLIENT_ID"'/g' drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java
   > drivelog.server-war/src/main/java/de/happycarl/drivelog/server/Constants.java
 - mvn install
-- if [ "$TRAVIS_BRANCH" = "master" ]; then mvn appengine:endpoints_get_client_lib; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then cd drivelog.server-war/target/endpoints-client-libs/drivelog; fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then mvn appengine:endpoints_get_client_lib;
+  fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then cd drivelog.server-war/target/endpoints-client-libs/drivelog;
+  fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then mvn install; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then git clone https://$GIT_TOKEN@github.com/HappyCarl/mvn-repo.git mvn-repo; fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then echo -e "Host github.com\n\tStrictHostKeyChecking
+  no\n" >> ~/.ssh/config; fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then git clone https://$GIT_TOKEN@github.com/HappyCarl/mvn-repo.git
+  mvn-repo; fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then mkdir -p mvn-repo/snapshots; fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then mvn -DaltDeploymentRepository=snapshot-repo::default::file:./mvn-repo/snapshots
   clean deploy; fi
 - if [ "$TRAVIS_BRANCH" = "master" ]; then cd mvn-repo; fi
-- if [ "$TRAVIS_BRANCH" = "master" ]; then git config --global user.email "info@travis-ci.org"; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then git config --global user.name "Travis CI"; fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then git config --global user.email "info@travis-ci.org";
+  fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then git config --global user.name "Travis CI";
+  fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then git add *; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then git commit -m "New Drivelog Java Clientlibs. Deploy ${TRAVIS_BUILD_NUMBER}."; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then git push -u origin master &> /dev/null; fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then git commit -m "New Drivelog Java Clientlibs.
+  Deploy ${TRAVIS_BUILD_NUMBER}."; fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then git push -u origin master &> /dev/null;
+  fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then cd ../; fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then cd ../../../../drivelog.server-ear; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then echo -e "$GOOGLE_SECRET_KEY" | mvn appengine:update; fi;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then echo -e "$GOOGLE_PASSWORD" | mvn appengine:update --email=;
+  fi;
 env:
   global:
   - secure: uu2//EfRUYs1BO91U0YEs8s694LJ3NFtvib42ur9rsgAupOMIFY2ZrGr8sLSEEo2KWUIEYN4N+1galmwH9KMq7kMj97N+dU+9qDeXjJ5vqFiB/yrVbwsKo4xDIfePrfNA21Eyz+vCxn2f8lFa2rNwZPdhF2Tw/7Ev6eXLi4uvrk=
   - secure: DazBOINsfZIagMmf9fQOAAqOvAavDEO9rNqG+Ih0BHb8UHudxnZD+u+ptKvSEopgNGmT40DZ/z8O21ryztMmsXBY92t7jRaoMskNzLvf2uAGkLOwYVPcgpHho8NxWLxwL2jQ84UwmBgvz0pExORY5wgQ5ARqf2MnU/IiNMFuYI8=
   - secure: Ega8b3cs17drkx9hqEY3FmjVfLT77YzYS4DN7wVN4fgqSGUwsK5mmF97gBYW977RzoiaKwV3zPx3vSdZGymN6noXDjyXhzPt9ImPoEjn0lAt7aLrUclOUkcV2fyE7U6tpYeCtXdABwugMREyVhO5W2yzRpef73Rt5cm3CZwKr+k=
   - secure: mQ3NzKl3o/6ZUFn2fLwNGDkYE20HJvNyzoIgXeKkcB+vBhTbtBh+qR8ijjhCU2CesIX++e4a8qKOvkMFnoFX+zAhx0qcnD7RbMlwKe7X3rJtkpCAO+XtpDnBMvu2zM2BYABV8XDsxHU2EPT6FGOMMAO7r6ZoFD10Bm9daMDO0PM=
+  - secure: L61odPaVCVYDHaDAOmu2EVe/F1qjd6GIDZN2fpBTXmOLoi+1laKOTo8A2gFXNDVeN0HM8h2u2ZyTcKSTIQKfGjj/DAzGKw9xFZFhf/2J+JYj9i0l8hS8ofDVNbkBHn8suZ+3yilR2BJokl5a+P9F5kjAhXzmPePMLq0iUVMaWF8=
