--- a/drivelog.server-ear/pom.xml
+++ b/drivelog.server-ear/pom.xml
@@ -29,6 +29,12 @@
         <groupId>com.google.appengine</groupId>
         <artifactId>appengine-maven-plugin</artifactId>
         <version>${appengine.target.version}</version>
+				<configuration>
+					<email>heinz.deployer@gmail.com</email>
+					<oauth2>false</oauth2>
+					<noCookies>true</noCookies>
+					<passin>true</passin>
+				</configuration>
       </plugin>
     </plugins>
   </build>
