Fuck you and fuck you and fuck you und YOUR EYEBROWS

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then cd ../; fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then cd ../../../../drivelog.server-ear; fi;
-- if [ "$TRAVIS_BRANCH" = "master" ]; then echo -e "$GOOGLE_PASSWORD" | mvn appengine:update --email=;
+- if [ "$TRAVIS_BRANCH" = "master" ]; then echo -e "$GOOGLE_PASSWORD" | mvn appengine:update;
   fi;
 env:
   global:
