--- a/drivelog.server-ear/pom.xml
+++ b/drivelog.server-ear/pom.xml
@@ -1,50 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.happycarl</groupId>
-  <artifactId>drivelog.server-ear</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>ear</packaging>
+	<artifactId>drivelog.server-ear</artifactId>
+	<packaging>ear</packaging>
 
-  <parent>
-    <groupId>de.happycarl</groupId>
-    <artifactId>drivelog.server</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>de.happycarl</groupId>
+		<artifactId>drivelog.server</artifactId>
+		<version>0.0.10</version>
+	</parent>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-ear-plugin</artifactId>
-        <version>2.8</version>
-        <configuration>
-          <version>5</version>
-          <defaultLibBundleDir>lib</defaultLibBundleDir>
-          <unpackTypes>war</unpackTypes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.google.appengine</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine.target.version}</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ear-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<version>5</version>
+					<defaultLibBundleDir>lib</defaultLibBundleDir>
+					<unpackTypes>war</unpackTypes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.appengine</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>${appengine.target.version}</version>
 				<configuration>
 					<email>heinz.deployer@gmail.com</email>
 					<oauth2>false</oauth2>
 					<noCookies>true</noCookies>
 					<passin>true</passin>
 				</configuration>
-      </plugin>
-    </plugins>
-  </build>
+			</plugin>
+		</plugins>
+	</build>
 
-  <dependencies>
-    <dependency>
-      <groupId>de.happycarl</groupId>
-      <artifactId>drivelog.server-war</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <type>war</type>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>de.happycarl</groupId>
+			<artifactId>drivelog.server-war</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+	</dependencies>
 </project>
