--- a/drivelog.server-war/pom.xml
+++ b/drivelog.server-war/pom.xml
@@ -4,14 +4,12 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<groupId>de.happycarl</groupId>
 	<artifactId>drivelog.server-war</artifactId>
 
 	<parent>
 		<groupId>de.happycarl</groupId>
 		<artifactId>drivelog.server</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>0.0.10</version>
 	</parent>
 
 	<properties>
