--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.happycarl</groupId>
 	<artifactId>drivelog.server</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.0.10</version>
 	<packaging>pom</packaging>
 
 	<properties>
