--- a/drivelog.server-ear/pom.xml
+++ b/drivelog.server-ear/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>de.happycarl</groupId>
 			<artifactId>drivelog.server-war</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.0.10</version>
 			<type>war</type>
 		</dependency>
 	</dependencies>
