--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -4,11 +4,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>war</packaging>
-	<artifactId>drivelog.server-war</artifactId>
+	<artifactId>geotown.server-war</artifactId>
 
 	<parent>
 		<groupId>de.happycarl</groupId>
-		<artifactId>drivelog.server</artifactId>
+		<artifactId>geotown.server</artifactId>
 		<version>0.0.15</version>
 	</parent>
 
