--- a/geotown.server-war/src/main/webapp/WEB-INF/web.xml
+++ b/geotown.server-war/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 		<servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
 		<init-param>
 			<param-name>services</param-name>
-			<param-value>de.happycarl.drivelog.server.DriveLogEndpoints</param-value>
+			<param-value>de.happycarl.geotown.server.GeoTownEndpoints</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
