--- a/geotown.server-ear/pom.xml
+++ b/geotown.server-ear/pom.xml
@@ -40,7 +40,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.happycarl</groupId>
-			<artifactId>drivelog.server-war</artifactId>
+			<artifactId>geotown.server-war</artifactId>
 			<version>0.0.16</version>
 			<type>war</type>
 		</dependency>
