--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>de.happycarl</groupId>
 		<artifactId>geotown.server</artifactId>
-		<version>0.0.16</version>
+		<version>${global.version}</version>
 	</parent>
 
 	<properties>
