--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <appengine.app.version>1</appengine.app.version>
+        <appengine.target.version>1.9.5</appengine.target.version>
+        <global.version>0.0.16</global.version>
+    </properties>
+
 	<groupId>de.happycarl</groupId>
 	<artifactId>geotown.server</artifactId>
-	<version>0.0.16</version>
+	<version>${global.version}</version>
 	<packaging>pom</packaging>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<appengine.app.version>1</appengine.app.version>
-		<appengine.target.version>1.9.5</appengine.target.version>
-	</properties>
+
 
 	<build>
 		<pluginManagement>
