--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -5,11 +5,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>war</packaging>
 	<artifactId>geotown.server-war</artifactId>
+	<version>0.0.18</version>
 
 	<parent>
 		<groupId>de.happycarl</groupId>
 		<artifactId>geotown.server</artifactId>
-		<version>${global.version}</version>
+		<version>0.0.18</version>
 	</parent>
 
 	<properties>
