--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>de.happycarl</groupId>
 	<artifactId>geotown.server</artifactId>
-	<version>0.0.18</version>
+	<version>0.0.18-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 
