--- a/geotown.server-ear/pom.xml
+++ b/geotown.server-ear/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>de.happycarl</groupId>
 			<artifactId>geotown.server-war</artifactId>
-			<version>LATEST</version>
+			<version>0.0.19-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
 	</dependencies>
