--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>de.happycarl</groupId>
 		<artifactId>geotown.server</artifactId>
-		<version>0.0.19</version>
+		<version>0.0.20-SNAPSHOT</version>
 	</parent>
 
 	<properties>
