--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -84,6 +84,22 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>com.theoryinpractise</groupId>
+                <artifactId>coffee-maven-plugin</artifactId>
+                <version>1.4.7</version>
+                <executions>
+                    <execution>
+                        <id>coffee</id>
+                        <goals>
+                            <goal>coffee</goal>
+                        </goals>
+                        <configuration>
+                            <coffeeOutputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/js/</coffeeOutputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
