--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -95,6 +95,17 @@
                             <goal>coffee</goal>
                         </goals>
                         <configuration>
+                            <coffeeJoinSets>
+                                <joinSet>
+                                    <id>main</id>
+                                    <fileSet>
+                                        <directory>${basedir}/src/main/coffee</directory>
+                                        <includes>
+                                            <include>**/*.coffee</include>
+                                        </includes>
+                                    </fileSet>
+                                </joinSet>
+                            </coffeeJoinSets>
                             <coffeeOutputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/js/</coffeeOutputDirectory>
                         </configuration>
                     </execution>
