--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ out
 .project
 *~
 geotown.server-war/src/main/java/de/happycarl/geotown/server/Constants.java
-geotown.server-war/src/main/coffee/constants.coffee
+constants.coffee
+constants.coffee-e
