Changed file include order.

--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -101,6 +101,7 @@
                                     <fileSet>
                                         <directory>${basedir}/src/main/coffee</directory>
                                         <includes>
+                                            <include>app.coffee</include>
                                             <include>**/*.coffee</include>
                                         </includes>
                                     </fileSet>
