--- a/geotown.server-ear/pom.xml
+++ b/geotown.server-ear/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>de.happycarl</groupId>
 		<artifactId>geotown.server</artifactId>
-		<version>0.0.28-SNAPSHOT</version>
+		<version>0.0.27</version>
 	</parent>
 
 	<build>
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>de.happycarl</groupId>
 			<artifactId>geotown.server-war</artifactId>
-			<version>0.0.28-SNAPSHOT</version>
+			<version>0.0.27</version>
 			<type>war</type>
 		</dependency>
 	</dependencies>
