--- a/geotown.server-war/package.json
+++ b/geotown.server-war/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "grunt": "~0.4.1",
-      "grunt-contrib-coffee": "^0.10.1",
-      "grunt-cli": "~0.1.9"
+    "grunt-cli": "~0.1.9",
+    "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
