--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -59,13 +59,16 @@
 					<webResources>
 						<resource>
 							<!-- this is relative to the pom.xml directory -->
-							<directory>${project.build.directory}/generated-sources/appengine-endpoints</directory>
+                            <directory>${project.build.directory}/generated-sources/appengine-endpoints</directory>
 							<!-- the list has a default value of ** -->
 							<includes>
 								<include>WEB-INF/*.discovery</include>
 								<include>WEB-INF/*.api</include>
 							</includes>
 						</resource>
+                        <resource>
+                            <directory>${project.build.directory}/generated-sources/js</directory>
+                        </resource>
 					</webResources>
 				</configuration>
 			</plugin>
