Changed travis script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ branches:
   only:
   - master
   - develop
-script:
+install:
 - sed -i -e "s/REPLACE_WEB_CLIENT_ID/$WEB_CLIENT_ID/g" geotown.server-war/src/main/java/de/happycarl/geotown/server/Constants.java
 - sed -i -e "s/REPLACE_WEB_CLIENT_ID/$WEB_CLIENT_ID/g" geotown.server-war/src/main/coffee/constants.coffee
 - sed -i -e "s/REPLACE_ANDROID_CLIENT_ID/$ANDROID_CLIENT_ID/g" geotown.server-war/src/main/java/de/happycarl/geotown/server/Constants.java
 - sed -i -e "s/REPLACE_IOS_CLIENT_ID/$IOS_CLIENT_ID/g" geotown.server-war/src/main/java/de/happycarl/geotown/server/Constants.java
 - mvn install
+script:
+- mvn package
 - if [ "$TRAVIS_BRANCH" = "master" ]; then mvn appengine:endpoints_get_client_lib;
   fi;
 - if [ "$TRAVIS_BRANCH" = "master" ]; then cd geotown.server-war/target/endpoints-client-libs/geotown;
