--- a/geotown.server-war/bower.json
+++ b/geotown.server-war/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-google-maps": "~1.1.2"
+    "angular-google-maps": "~1.1.2",
+    "angular-busy": "~4.0.4"
   }
 }
