Use da matrix Travis!1!!1

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ branches:
   - master
   - develop
 env:
-  - ACTION=deploy
-  - ACTION=endpoints
+  matrix:
+    - ACTION=deploy
+    - ACTION=endpoints
 install:
 - npm install -g bower
 - sed -i -e "s/REPLACE_WEB_CLIENT_ID/$WEB_CLIENT_ID/g" geotown.server-war/src/main/java/de/happycarl/geotown/server/Constants.java
