Travis' purpose is to spread randomness to the world.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ branches:
   only:
   - master
   - develop
-env:
-  matrix:
-    - ACTION=deploy
-    - ACTION=endpoints
+matrix:
+  include:
+    - env: ACTION=deploy
+    - env: ACTION=endpoints
 install:
 - npm install -g bower
 - sed -i -e "s/REPLACE_WEB_CLIENT_ID/$WEB_CLIENT_ID/g" geotown.server-war/src/main/java/de/happycarl/geotown/server/Constants.java
