--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 script:
 - mvn package
 - if [[ $ACTION == "endpoints" ]]; then scripts/buildEndpointLibs.sh; fi;
-- if [[ $ACTION == "deploy" ]]; then scripts/deployApp.sh, fi;
+- if [[ $ACTION == "deploy" ]]; then scripts/deployApp.sh; fi;
 env:
   global:
   - secure: uu2//EfRUYs1BO91U0YEs8s694LJ3NFtvib42ur9rsgAupOMIFY2ZrGr8sLSEEo2KWUIEYN4N+1galmwH9KMq7kMj97N+dU+9qDeXjJ5vqFiB/yrVbwsKo4xDIfePrfNA21Eyz+vCxn2f8lFa2rNwZPdhF2Tw/7Ev6eXLi4uvrk=
