--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -17,6 +17,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+    <repositories>
+        <repository>
+            <id>maven</id>
+            <url>https://raw.github.com/HappyCarl/mvn-repo/tree/master/snapshots/</url>
+        </repository>
+    </repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
@@ -39,11 +46,16 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
-		<dependency>
-			<groupId>com.googlecode.objectify</groupId>
-			<artifactId>objectify</artifactId>
-			<version>4.1.2</version>
-		</dependency>
+        <dependency>
+            <groupId>com.googlecode.objectify</groupId>
+            <artifactId>objectify</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.beoui</groupId>
+            <artifactId>geocell</artifactId>
+            <version>0.0.4-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 	<build>
