--- a/geotown.server-war/bower.json
+++ b/geotown.server-war/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular-google-maps": "~1.1.2",
-    "angular-busy": "~4.0.4"
+    "angular-busy": "~4.0.4",
+    "angular-loading-bar": "~0.4.3"
   }
 }
