--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -22,6 +22,10 @@
             <id>happycarl</id>
             <url>https://raw.github.com/HappyCarl/mvn-repo/master/snapshots</url>
         </repository>
+				<repository>
+						<id>happycarl-releases</id>
+						<url>https://raw.github.com/HappyCarl/mvn-repo/master/releases</url>
+				</repository>
     </repositories>
 
 	<dependencies>
@@ -46,16 +50,16 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
-        <dependency>
-            <groupId>com.googlecode.objectify</groupId>
-            <artifactId>objectify</artifactId>
-            <version>4.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.beoui</groupId>
-            <artifactId>geocell</artifactId>
-            <version>0.0.4-SNAPSHOT</version>
-        </dependency>
+    <dependency>
+      <groupId>com.googlecode.objectify</groupId>
+      <artifactId>objectify</artifactId>
+      <version>4.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.beoui</groupId>
+      <artifactId>geocell</artifactId>
+      <version>0.0.4</version>
+    </dependency>
 	</dependencies>
 
 	<build>
