--- a/geotown.server-ear/pom.xml
+++ b/geotown.server-ear/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>de.happycarl</groupId>
 		<artifactId>geotown.server</artifactId>
-		<version>0.2.1-SNAPSHOT</version>
+		<version>0.2.1</version>
 	</parent>
 
     <properties>
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>de.happycarl</groupId>
 			<artifactId>geotown.server-war</artifactId>
-			<version>0.2.1-SNAPSHOT</version>
+			<version>0.2.1</version>
 			<type>war</type>
 		</dependency>
 	</dependencies>
