--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>de.happycarl</groupId>
         <artifactId>geotown.server</artifactId>
-        <version>0.2.2-SNAPSHOT</version>
+        <version>0.2.2</version>
     </parent>
 
     <properties>
