--- a/geotown.server-war/src/main/webapp/WEB-INF/web.xml
+++ b/geotown.server-war/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>UploadImageServlet</servlet-name>
+        <servlet-class>de.happycarl.geotown.server.UploadImageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UploadImageServlet</servlet-name>
+        <url-pattern>/uploadImage</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>MainServlet</servlet-name>
         <servlet-class>de.happycarl.geotown.server.MainServlet</servlet-class>
     </servlet>
@@ -23,7 +32,8 @@
         <servlet-name>MainServlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-    
+
+
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
