--- a/geotown.server-war/pom.xml
+++ b/geotown.server-war/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>geocell</artifactId>
             <version>0.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
     </dependencies>
 
     <build>
