--- a/geotown.server-war/bower.json
+++ b/geotown.server-war/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
+    "bootstrap-material-design": "3440ebe63643d4765a8473fe630dc83d44adedc0",
     "angular-google-maps": "~1.1.2",
     "angular-loading-bar": "~0.4.3",
     "ng-file-upload": "~1.5.0"
